<resources>
    <string name="app_name">Calculadora</string>
    <string name="action_settings">Settings</string>
    <string name="textBox1">Digite o primeiro numero</string>
    <string name="textBox2">Digite o segundo numero</string>
    <string name="btnSomar">Somar</string>
    <string name="btnDividir">Dividir</string>
    <string name="btnSubtrair">Subtrair</string>
    <string name="btnMultiplicar">Multiplicar</string>
</resources>
