<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_calculadora"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jsilv.app.calculadora.CalculadoraActivity"
    tools:showIn="@layout/activity_calculadora">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBox1"/>
    <EditText
        android:id="@+id/et_Num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text=""
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBox2"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:id="@+id/et_Num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text=""
        android:inputType="numberDecimal"
        />
    <Button
        android:id="@+id/btn_Somar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSomar"
        android:layout_marginTop="100dp"
        />
    <Button
        android:id="@+id/btn_Subtrair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSubtrair"
        android:layout_marginTop="150dp"
        />
    <Button
        android:id="@+id/btn_Multiplicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnMultiplicar"
        android:layout_marginTop="200dp"
        />
    <Button
        android:id="@+id/btn_Dividir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDividir"
        android:layout_marginTop="250dp"
        />
</RelativeLayout>
